<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#FF5722"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#FF5722"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/Operaciones"
            android:textColor="#ECE3E3"
            android:textColorHint="#ECE6E6"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#8BC34A"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/dato1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/dato2"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|textPersonName" />

        <Button
            android:id="@+id/btnsumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/sumar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnrestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:text="@string/restar"
            android:textColor="#121111"
            android:textColorLink="#DD1313"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/multiplicar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btndivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:gravity="center|center_vertical"
            android:text="@string/division"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmayor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/mayor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmcd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/mcd"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmcm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/mcm"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:background="#1A37DC"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/unimag" />
    </LinearLayout>
</LinearLayout>